# rat

./: Cargo.toml  Makefile  README.md  RELEASES.md  rtest.py  wc.py
auto/: eval.rat  input.rat  must.rat  op_and.rat  op_eq.rat  op_ge.rat  op_gt.rat  op_le.ratu  op_lt.rat  op_ne.rat  op_not.rat  op_or.rat  op_sub.rat  say.rat  variables.rati
my/: eg1.rat  foo.rat  liaber.rat  pi_approx.rat  start.repl  unichar.rat
src/: main.rs
src/ast/: mod.rs
src/bi/: ink.rs  mod.rs
src/bi/io/: link.rs  mod.rs  wink.rs
src/brat/: bint.rs  mod.rs
src/bst/: mod.rs
src/cab/: funct.rs  mod.rs  sea.rs
src/parse/: mod.rs
src/repl/: mod.rs  rline.rs
src/run/: cmd.rs  mod.rs
src/udisp/: mod.rs
std/: exp.rat  log.rat  prod.rat  root.rat  sin.rat  sum.rat
sys/: abs.rat  all.rat  any.rat  as_decimal.rat  as_text_sci.rat  every.rat  filter.rat  inputkey.rat  insert_sublist.rat  is_bool.rat  is_bool.ratu  is_finite.rat  is_int.rat  is_text.rat  modulo.rat  nyi.rat  outm.rat  outn.rat  outs.rat  rat_help.rat  reduce.rat  replace_element.rat  replace_sublist.rat  sign.rat  without_sublist.rat
usr/: atan_v1.rat  fact_loop.rat  fact_rec.rat  fib_loop.rat  fib_rec.rat  log_v1.rat  pow_v1.rat
