[package]
name = "rat"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0" # parse (lexer)
num = "0.4" # brat
num-bigint = "0.4" # brat
pomelo = "0.1.5" # parse (parser)
rustyline = "9.0.0" # repl (readline)
regex = "1.5.4" # repl (completion)

[target.'cfg(not(windows))'.dependencies]
termios = "0.3.3" # bi/io/link (inkey)
